RESOLVED FIXED132840
REGRESSION (r165972): Can't type into text fields in Flash
https://bugs.webkit.org/show_bug.cgi?id=132840
Summary REGRESSION (r165972): Can't type into text fields in Flash
Alexey Proskuryakov
Reported 2014-05-12 15:33:01 PDT
Attachments
proposed fix (1.70 KB, patch)
2014-05-12 15:35 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2014-05-12 15:35:39 PDT
Created attachment 231334 [details] proposed fix
WebKit Commit Bot
Comment 2 2014-05-12 16:18:15 PDT
Comment on attachment 231334 [details] proposed fix Clearing flags on attachment: 231334 Committed r168654: <http://trac.webkit.org/changeset/168654>
WebKit Commit Bot
Comment 3 2014-05-12 16:18:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.