REGRESSION (r165972): Can't type into text fields in Flash https://bugs.webkit.org/show_bug.cgi?id=132840 <rdar://problem/16671969>

Reviewed by Anders Carlsson.

* UIProcess/API/mac/WKView.mm: (-[WKView inputContext]): Restore a function that
got accidentally lost when adding async text input code.


Canonical link: https://commits.webkit.org/150889@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168654 268f45cc-cd09-0410-ab3c-d52691b4dbfc